# nanochat-dgxspark-rl

./: .gitignore  README.md  README_EN.md  notes.txt  pyproject.toml  requirements.txt
data/: gsm8k_mini_test.jsonl  search_r1_demo.jsonl  search_r1_multiturn_train.jsonl  search_r1_multiturn_train1.jsonl  search_r1_multiturn_train2.jsonl  search_r1_multiturn_train4.jsonl  search_r1_multiturn_train_new.jsonl  search_r1_multiturn_val.jsonl  sft_demo.jsonl  test_search.jsonl
examples/: grpo_2node.sh  grpo_single_node.sh  search_r1_2node.sh  search_r1_single_node.sh  sft_2node.sh  sft_single_node.sh
nanochat/: __init__.py  hf_model_wrapper.py  hf_tokenizer_wrapper.py
scripts/: __init__.py  eval.py  gen_val_gemini.py  generate_search_r1_data_with_gemini.py  generate_search_r1_multiturn_data.py  grpo.py  notes.txt  search_r1_grpo.py  sft.py
tasks/: __init__.py  custom_jsonl.py  search_r1.py
tools/: __init__.py  memory_manager.py  search_tools.py
